--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "domjson": "^0.1.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "html2json": "^1.0.2",
     "mongoose": "^6.5.0",
     "nodemon": "^2.0.19"
   }
